# mosaicify

./: .gitignore  Cargo.toml  README.md
src/: clap.rs  lab.rs  main.rs  mosaic.rs
