[package]
name = "image-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.86"
clap = "4.5.16"
image = { version = "0.25.2", features = ["rayon"] }
indicatif = "0.17.8"
itertools = "0.13.0"
num = "0.4.3"
rand = "0.8.5"
rayon = "1.10.0"
